--- a/welcome.html
+++ b/welcome.html
@@ -53,15 +53,15 @@
           </a>
   
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#hero-connect" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="/index.html" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="#hero-appointment" class="nav-link px-2 link-dark">Book Appointment</a></li>
             <li><a href="#hero-products" class="nav-link px-2 link-dark">Buy products</a></li>
-            <li><a href="#hero-marketing" class="nav-link px-2 link-dark">Meet our Doctors</a></li>
+            <li><a href="#hero-faqs" class="nav-link px-2 link-dark">FAQs</a></li>
           </ul>
   
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+          <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
             <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-          </form>
+          </form> -->
   
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -93,13 +93,13 @@
   <div class="container col-xxl-8 px-4 py-3">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="images/gallery/welcomeImage1.jpg" class="d-block mx-lg-auto img-fluid" alt="Appointment Image"  loading="lazy">
+        <img src="images/gallery/welcomeImage1.jpg" class="d-block mx-lg-auto img-fluid align-items-center" alt="Appointment Image"  loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Schedule an appointment</h1>
         <p class="lead">Book your appointment now with our expert skin-care doctors. Don't wait, prioritize your skin health, and we'll treat you ASAP!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Book now</button>
+          <a href="#final-booking"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Book now</button></a>
           <!-- <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> -->
         </div>
       </div>
@@ -120,51 +120,139 @@
         </div>
       </div>
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="images/gallery/drugs.webp" class="d-block mx-lg-auto img-fluid" alt="Appointment Image"  loading="lazy">
+        <img src="images/gallery/drugs.webp" class="d-block mx-lg-auto img-fluid align-items-center" alt="Appointment Image" loading="lazy">
       </div>
     </div>
   </div>
   </section>
 
-  <section class="hero-marketing" id="hero-marketing">
+  <!-- <section class="hero-marketing" id="hero-marketing">
     <div class="container marketing">
      <div class="row">
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-      <h2>Dr. Vera Alozie</h2>
-      <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-    </div><!-- /.col-lg-4 -->
+      <h2 class="pt-2">Dr. Vera Alozie</h2>
+      <p>With ten years of experience, Vera as she is fondly called loves to see her clients satisfied.</p>
+    </div>
     
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-      <h2>Dr. Henry Aguma</h2>
-      <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-    </div><!-- /.col-lg-4 -->
+      <h2 class="pt-2">Dr. Henry Aguma</h2>
+      <p>Talking to clients is a joy-giver for Dr Henry, our Mr. Incredible.</p>
+    </div>
     
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-      <h2>Dr. Serah Lee</h2>
-      <p>And lastly this, the third column of representative placeholder content.</p>
-    </div><!-- /.col-lg-4 -->
+      <h2 class="pt-2">Dr. Serah Lee</h2>
+      <p>Serah lee is industrous and will go above and beyond to leave you with a glistering skin.</p>
+    </div>
 
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-      <h2>Dr. Theo Philus</h2>
-      <p>And lastly this, the third column of representative placeholder content.</p>
-    </div><!-- /.col-lg-4 -->
+      <h2 class="pt-2">Dr. Theo Philus</h2>
+      <p>Theo is a client-favorite beacuse of his unassuming aura. Facial infections are his forte.</p>
+    </div>
 
   <div class="col-lg-4">
     <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-    <h2>Dr. Vee Afogu</h2>
-    <p>And lastly this, the third column of representative placeholder content.</p>
-  </div><!-- /.col-lg-4 -->
-</div><!-- /.row -->
+    <h2 class="pt-2">Dr. Vee Afogu</h2>
+    <p>The beautiful Dr. Vee will leave your skin feeling brand new. She has over 7 years experience.</p>
+  </div>
+</div>
 
+</section> -->
+
+
+<section class="py-5" id="hero-faqs">
+  <h1 class=" fw-bold text-center">Frequently Asked Questions</h1>
+
+  <div class="accordion accordion-flush pt-4" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          What types of skin diseases do you specialize in treating?
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Our e-healthcare platform specializes in treating a wide range of skin diseases, including but not limited to acne, eczema, psoriasis, dermatitis, rosacea, fungal infections, and skin allergies.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          How does your e-healthcare platform work for skin disease treatment?
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Our e-healthcare platform allows you to connect with experienced dermatologists through virtual consultations. You can book an appointment, discuss your skin concerns, receive a diagnosis, and get a personalized treatment plan. You can also ask questions and seek clarification during and after the consultation.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Are your dermatologists qualified and licensed?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Yes, all our dermatologists are highly qualified, experienced, and licensed medical professionals. They have expertise in diagnosing and treating various skin diseases.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          How can I schedule an appointment with a dermatologist?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">You can easily schedule an appointment through our website. Simply navigate to the appointment booking section, select a convenient date and time, and provide the required information. Our system will guide you through the process.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Can I get a prescription for medications through your e-healthcare platform?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Yes, our dermatologists can provide prescriptions for medications as part of your treatment plan. However, the availability of certain medications may depend on your location and local regulations.</div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="final-booking">
+  <div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-4 shadow">
+        <div class="modal-header p-5 pb-4 border-bottom-0">
+          <h1 class="fw-bold mb-0 fs-2">Book an appointment</h1>
+        </div>
+  
+        <div class="modal-body p-5 pt-0">
+          <form class="">
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control rounded-3" id="booking-form-name" placeholder="first name">
+              <label for="floatingInput">Your name</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="date" class="form-control rounded-3" id="booking-form-date" placeholder="">
+              <label for="floatingInput">Preferred date</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control rounded-3" rows="15"  id="booking-form-message" placeholder="Additional message">
+              <label for="floatingPassword">Additional messages</label>
+            </div>
+            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Book now</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
   </div>
