product html introduced

--- a/welcome.html
+++ b/welcome.html
@@ -55,7 +55,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/index.html" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="#hero-appointment" class="nav-link px-2 link-dark">Book Appointment</a></li>
-            <li><a href="#hero-products" class="nav-link px-2 link-dark">Buy products</a></li>
+            <li><a href="/product.html" class="nav-link px-2 link-dark">Shop now</a></li>
             <li><a href="#hero-faqs" class="nav-link px-2 link-dark">FAQs</a></li>
           </ul>
   
@@ -115,7 +115,7 @@
         <h1 class="display-5 fw-bold lh-1 mb-3">Buy skin products right for your skin</h1>
         <p class="lead">Discover skin products tailored to your needs. Order now for fast delivery and achieve flawless skin in no time!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Buy now</button>
+          <a href="/product.html"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Buy now</button></a>
           <!-- <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> -->
         </div>
       </div>
