changes to the script.js

--- a/welcome.html
+++ b/welcome.html
@@ -237,7 +237,7 @@
           <form class="">
             <div class="form-floating mb-3">
               <input type="text" class="form-control rounded-3" id="booking-form-name" placeholder="first name">
-              <label for="floatingInput">Your name</label>
+              <label for="floatingInput">Your username</label>
             </div>
             <div class="form-floating mb-3">
               <input type="date" class="form-control rounded-3" id="booking-form-date" placeholder="">
