--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
+                                <a class="nav-link" href="/product.html">Shop now</a>
                             </li>
 
                             <li class="nav-item">
