Connections folder for connections between frontend and backend

--- a/signup.html
+++ b/signup.html
@@ -109,6 +109,6 @@
         </section>
 
         <!-- JavaScript -->
-        <script src="js/script.js"></script>
+        <script src="js/connections/script.js"></script>
     </body>
 </html>
