--- a/welcome.html
+++ b/welcome.html
@@ -55,10 +55,10 @@
               <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
             </a>
             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="#">Update Profile</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="/updateUser.html">Update Profile</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Settings</a></li> -->
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Sign out</a></li>
+              <li><a class="dropdown-item" id="logoutLink" href="#">Sign out</a></li>
             </ul>
           </div>
         </div>
@@ -70,7 +70,9 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Chat with a doctor</h1>
         <p class="col-md-8 fs-4">Subscribe to connect with experienced doctors for reliable medical advice and consultations from the comfort of your home at 3,000 naira.</p>
-        <button class="btn btn-primary btn-lg" type="button">Connect now</button>
+        <a href="https://wa.me/+2348186706371" target="_blank"><button class="btn btn-primary btn-lg" type="button">Connect now</button></a>
+
+        <!-- <button class="btn btn-primary btn-lg" type="button"></button> -->
       </div>
     </div>
   </section>
@@ -223,7 +225,8 @@
   </div>
 </main>
 
-
-<script src="js/connection.js"></script>   
+<script src="js/bootstrap2.bundle.min.js"></script>
+<script src="js/connections/connection.js"></script>   
+<script src="js/connections/logout.js"></script> 
   </body>
 </html>
