--- a/welcome.html
+++ b/welcome.html
@@ -55,7 +55,7 @@
               <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
             </a>
             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="/updateUser.html">Update Profile</a></li>
+              <li><a class="dropdown-item" href="/userUpdateProfile.html">Update Profile</a></li>
               <!-- <li><a class="dropdown-item" href="#">Settings</a></li> -->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" id="logoutLink" href="#">Sign out</a></li>
