--- a/userUpdateProfile.html
+++ b/userUpdateProfile.html
@@ -41,7 +41,7 @@
 <div class="container-xl px-4 mt-4">
     <!-- Account page navigation-->
     <nav class="nav nav-borders">
-        <a class="nav-link active ms-0" href="https://www.bootdey.com/snippets/view/bs5-edit-profile-account-details" target="__blank">Profile</a>
+        <a class="nav-link active ms-0" href="userUpdateProfile.html">Profile</a>
         <a class="nav-link active ms-0" href="welcome.html" >Back to Home page</a>
     </nav>
     <hr class="mt-0 mb-4">
@@ -65,7 +65,7 @@
             <div class="card mb-4">
                 <div class="card-header">Account Details</div>
                 <div class="card-body">
-                    <form>
+                    <form action="#" id="update-form"> 
                         <!-- Form Group (username)-->
                         <div class="mb-3">
                             <label class="small mb-1" for="update-firstName">First name</label>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <!-- Save changes button-->
-                        <button class="btn btn-primary" type="button">Save changes</button>
+                        <button class="btn btn-primary" type="submit">Save changes</button>
                     </form>
                 </div>
             </div>
@@ -140,5 +140,6 @@
 <script src="js/bootstrap3.bundle.min.js"></script>
 <script src="js/connections/update.js"></script>
 <script src="js/bootstrap2.bundle.min.js"></script>
+<script src="js/connections/profilePicture.js"></script>
 </body>
 </html>
