product page loading dynamically

--- a/product.html
+++ b/product.html
@@ -169,7 +169,7 @@
   <div class="px-4 pt-3 my-4 text-center border-bottom">
     <h1 class="display-4 fw-bold text-body-emphasis">Product is one click away</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">With just a single click, you can unlock a world of amazing products and services tailored to your needs. Start exploring now and experience the convenience of one-click shopping at its finest!</p>
+      <p class="lead mb-4 ">With just a single click, you can unlock a world of amazing products and services tailored to your needs. Start exploring now and experience the convenience of one-click shopping at its finest!</p>
     </div>
     <div class="overflow-hidden" style="max-height: 50vh;">
       <div class="container px-5">
@@ -181,8 +181,9 @@
   <div class="album py-5 bg-body-tertiary">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="productList">
+
+        <!-- <div class="col">
           <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
@@ -318,7 +319,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -385,6 +386,7 @@
   </footer>
 </div>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/connections/product.js"></script>
 
     </body>
 </html>
