--- a/product.html
+++ b/product.html
@@ -153,7 +153,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/welcome.html" class="nav-link px-2 text-secondary">Home</a></li>
             <!-- <li><a href="#" class="nav-link px-2 text-secondary">Orders</a></li> -->
-            <li><a href="checkout.html" class="nav-link px-2 text-secondary">Cart</a></li>
+            <li><a href="checkout.html" class="nav-link px-2 text-secondary">Cart<span class="badge bg-primary rounded-pill align-text-bottom">0</span></a></li>
           </ul>
   
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -187,16 +187,12 @@
   </div>
 
   <div class="d-flex gap-2 justify-content-center py-5 text-center">
-    <!-- <button class="btn btn-outline-secondary d-inline-flex align-items-center text-center" type="button">
-      View cart
-      <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"/></svg>
-    </button> -->
     <a href="checkout.html"><button class="btn btn-primary d-inline-flex align-items-center text-center" type="button">
       Go to checkout
       <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"/></svg>
     </button></a>
-    
   </div>
+
 
 </main>
 
