changes to front end and back end

--- a/userUpdateProfile.html
+++ b/userUpdateProfile.html
@@ -52,11 +52,11 @@
                 <div class="card-header">Profile Picture</div>
                 <div class="card-body text-center">
                     <!-- Profile picture image-->
-                    <img class="img-account-profile rounded-circle mb-2" src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="Profile picture">
+                    <img class="img-account-profile rounded-circle mb-2" src="images/blank-profile-picture-973460_640.webp" alt="Profile picture">
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
-                    <button class="btn btn-primary" type="button">Upload new image</button>
+                    <button class="btn btn-outline-primary" type="button">Upload new image</button>
                 </div>
             </div>
         </div>
