reset password effected

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
         <main>
 
-            <nav class="navbar navbar-expand-lg fixed-top shadow-lg" style="background-color: #e3f2fd;">
+            <nav class="navbar navbar-expand-lg fixed-top shadow-lg" style="background-color: #c1dceb36;">
                 <div class="container">
                     <a class="navbar-brand mx-auto d-lg-none" href="index.html">
                         Skin
@@ -165,7 +165,7 @@
                       </div>
                     </div>
                     <div class="col-md-6 d-flex">
-                      <div class="bg-primary pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden w-100">
+                      <div class="bg-primary px-3 pt-md-5 px-md-5 text-center overflow-hidden w-100">
                         <div class="my-3 py-3">
                           <h2 class="display-6 text-light fw-bold">Products fit for you</h2>
                           <p class="lead text-light">Get skin products that make your skin pop, tailored just for you.</p>
