--- a/product.html
+++ b/product.html
@@ -187,8 +187,8 @@
     </div>
   </div>
 
-  <div class="d-flex gap-2 justify-content-center py-5 text-center">
-    <a href="checkout.html"><button class="btn btn-primary d-inline-flex align-items-center text-center" type="button">
+  <div class="d-flex gap-2 justify-content-center align-items-center py-5 text-center">
+    <a href="checkout.html"><button class="btn btn-primary d-inline-flex align-items-center justify-content-center text-center" type="button">
       Go to checkout
       <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"/></svg>
     </button></a>
