--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,8 @@
                         </div>
 
                         <div class="form-link">
-                            <a href="#" class="forgot-pass">Forgot password?</a>
+                            <a href="/resetPassword.html" class="forgot-pass">Forgot password?</a>
+                        
                         </div>
 
                         <div class="field button-field">
@@ -76,6 +77,7 @@
 
                         <div class="field input-field">
                             <input type="password" placeholder="Password" class="password" id="signup-password">
+                            <i class='bx bx-hide eye-icon'></i>
                         </div>
 
                         <div class="field button-field">
@@ -84,25 +86,9 @@
                     </form>
 
                     <div class="form-link">
-                        <span>Already have an account? <a href="#" class="link login-link">Login</a></span>
+                        <span>Already have an account? <a href="signin.html" class="link login-link">Login</a></span>
                     </div>
                 </div>
-
-                <!-- <div class="line"></div> -->
-
-                <!-- <div class="media-options">
-                    <a href="#" class="field facebook">
-                        <i class='bx bxl-facebook facebook-icon'></i>
-                        <span>Login with Facebook</span>
-                    </a>
-                </div>
-
-                <div class="media-options">
-                    <a href="#" class="field google">
-                        <img src="#" alt="" class="google-img">
-                        <span>Login with Google</span>
-                    </a>
-                </div> -->
             </section>
             </div>
             
