--- a/welcome.html
+++ b/welcome.html
@@ -65,21 +65,23 @@
       </div>
     </header>
 
-    <section id="hero-connect">
-    <div class="pt-5 pb-1 mb-3 bg-light rounded-3">
+    <section id="hero-connect"  >
+      <div style="background-color: #c1dceb36;">
+    <div class="pt-5 pb-1 mb-3 rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Chat with a doctor on Whatsapp</h1>
         <p class="col-md-8 fs-4">Subscribe to connect with experienced doctors for reliable medical advice and consultations from the comfort of your home at <span class="text-primary fw-bold">3,000 naira </span>only </p>
-        <a href="https://wa.me/+2348186706371" target="_blank"><button class="btn btn-primary btn-lg" type="button">Connect now</button></a>
+        <a href="https://wa.me/+2348186706371" target="_blank"><button class="btn btn-outline-primary btn-lg" type="button">Connect now</button></a>
 
         <!-- <button class="btn btn-primary btn-lg" type="button"></button> -->
       </div>
     </div>
+  </div>
   </section>
 
     <!-- <div class="b-example-divider"></div> -->
-    <section id="hero-appointment">
-      <div class="container col-xxl-8 px-4 py-3 bg-body-secondary">
+    <section id="hero-appointment" >
+      <div class="container-fluid col-xxl-8 px-4 py-3  bg-body-secondary" >
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="images/gallery/welcomeImage1.jpg" class="d-block mx-auto img-fluid justify-content-center align-items-center" alt="Appointment Image" loading="lazy">
@@ -88,21 +90,22 @@
             <h1 class="display-5 fw-bold lh-1 mb-3 text-justify text-sm-start">Schedule an appointment</h1>
             <p class="lead text-justify">Book your appointment now with our expert skin-care doctors. Don't wait, prioritize your skin health, and we'll treat you ASAP!</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="#final-booking"><button type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2">Book now</button></a>
+              <a href="#final-booking"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Book now</button></a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    
+
+   
     <section class="hero-products" id="hero-products">
-      <div class="container col-xxl-8 px-4 pt-2 pb-5 bg-light">
+      <div class="container-fluid col-xxl-8 px-4 pt-2 pb-5" style="background-color: #c1dceb36;">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3 text-justify text-sm-start">Buy skin products right for your skin</h1>
             <p class="lead text-justify">Discover skin products tailored to your needs. Order now for fast delivery and achieve flawless skin in no time!</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="/product.html"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Buy now</button></a>
+              <a href="/product.html"><button type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2">Buy now</button></a>
             </div>
           </div>
           <div class="col-10 col-sm-8 col-lg-6">
@@ -111,6 +114,7 @@
         </div>
       </div>
     </section>
+ 
     
 
 <section class="py-5" id="hero-faqs">
@@ -171,7 +175,7 @@
 </section>
 
 <section id="final-booking">
-  <div class="modal modal-sheet position-static d-block bg-body-secondary bg-light bg-primary-bg-subtle p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
+  <div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" style="background-color: #c1dceb36;" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
       <div class="modal-content rounded-4 shadow">
         <div class="modal-header p-5 pb-4 border-bottom-0">
