changes with alert text

--- a/resetPassword.html
+++ b/resetPassword.html
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="field button-field btn-outline-primary">
-                            <button id="reset-button" type="submit" value="Login">Reset password</button>
+                            <button id="reset-button" type="submit" value="Login" data-bs-toggle="modal" data-bs-toggle="#reg-modal">Reset password</button>
                         </div>
                     </form>
                 </div>
